c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/extra_credit/union_type_declarations/union_self_reference.c
union u {
    int i;
    union u self; //illegal; incomplete member type
};

int main(void) {
    return 0;
}